* Mon Nov 30 2020 Shenmei Tu <tushenmei@huawei.com>
- Add level and batch query for install depend interface

* Sat Nov 30 2020 Pengju Jiang <jiangpengju2@huawei.com>
- Modify the address of the database after successful initialization

* Sat Nov 28 2020 Pengju Jiang <jiangpengju2@huawei.com>
- Test case refactoring-upload in batches 5

* Sat Nov 28 2020 Shenmei Tu <tushenmei@huawei.com>
- Test case refactoring-upload in batches 4

* Fir Nov 27 2020 Shenmei Tu <tushenmei@huawei.com>
- Test case refactoring-upload in batches 3

* Thu Nov 26 2020 Chengqiang Bao <baochengqiang1@huawei.com> 
- Test case refactoring-upload in batches 2

* Wed Nov 25 2020 Shenmei Tu <tushenmei@huawei.com>
- Test case refactoring-upload in batches 1

* Mon Nov 23 2020 Shenmei Tu <tushenmei@huawei.com>
- Modification of add_sig_info interface bug, adding test cases for this interface

* Mon Nov 18 2020 Pengju Jiang <jiangpengju2@huawei.com>
- Upload zip file download in batches-basic code

* Tue Nov 10 2020 Shenmei Tu <tushenmei@huawei.com>
- New requirement: add filelist query interface

* Wed Nov 4 2020 Chengqiang Bao <baochengqiang1@huawei.com> 
- pkgship add license to all files

* Wed Nov 4 2020 Shaowei Cheng <chenshaowei3@huawei.com> 
- Solve the problem that the release time value cannot be obtained

* Tue Nov 3 2020 Shaowei Cheng <chenshaowei3@huawei.com> 
- When the dependency graph in pkgship is aimed at the source code 
  package display, the build type package will be used as its next dependency
  
* Tue Nov 3 2020 Yiru Wang <wangyiru1@huawei.com> 
- Add the license file in the root directory of pkgship

* Tue Nov 3 2020 Xinxing Li <lixinxing6@huawei.com> 
- Add loading status and modify issue-list interface

* Sat Oct 31 2020 Chengqiang Bao <baochengqiang1@huawei.com> 
- The bedepend interface adds exception capture and modifies the accuracy 
  of query results in special scenarios
  
* Sat Oct 31 2020 Chengqiang Bao <baochengqiang1@huawei.com> 